Sat Nov 1 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/parser.cc: Fix bug #806419. Ignore bad words at start of phrase.

Tue Oct 28 11:58:06 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdig/htdig.cc: set the debug level when we are importing a cookie file.
    Fix bug #831478.

Mon Oct 27 17:13:02 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdig/Server.cc: Fix bug #831407.  Make sure time properly reset after
      delay completed, so that it doesn't allow 2 connections per delay.

Mon Oct 27 15:57:38 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdoc/THANKS.html: Added Lachlan, Jim and Neal to the active developers
      list.

Sun Oct 26 2003  Lachlan Andrew <lha@users.sourceforge.net>

    * htdoc/hts_templates.html: Clarify that PREV/NEXTPAGE template variables
      are empty if there is only one page, ignoring no_{prev,next}_page_text.

Sun Oct 26 2003  Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/defaults.cc: Fixed documentation to close bug #829767
      Clarified that noindex_start/end do not get replaced by whitespace.
      Also removed spurious '>' from start of boolean_syntax_errors, and
      added missing '#' to many local <a href> tags.

Sun Oct 26 12:42:27 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htcommon/defaults.cc: Fixed description of 'head_before_get' after
      Lachlan fixes.
    * htdoc/attrs.html: rerun cf_generate.pl

Sat Oct 25 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/Display.cc: Fix #829761.
      If last component of the URL is used as a title, URL-decode it.

Sat Oct 25 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htdig/Server.cc: Fix #829754.  Avoid calculations with negative time

Fri Oct 24 17:17:15 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdoc/htdig.html, htdoc/meta.html, htdoc/require.html: Update URL for
      the Standard for Robot Exclusion.
